Fix footer colors in dark mode

--- a/assets/styles/base.sass
+++ b/assets/styles/base.sass
@@ -573,6 +573,16 @@ html.post
       blockquote
         border-left-color: $dt-lighter-bg
         background-color: $dt-colored-bg
+
+    aside.aboutAuthor
+      background-color: $dt-clear-bg
+
+    aside.licensing
+      background-color: $dt-lighter-bg
+
+    aside.seeAlso
+      background-color: $dt-colored-bg
+
 // Make fonts larger on large screens to improve readability
 @media (min-width: 48em)
   html.post article
